2008-03-18  Iain Holmes  <iain@gnome.org>

	* src/core/compositor.c (window_has_shadow): Allow shaped windows 
	_with frames_ to have shadows.
	(meta_compositor_set_active_window): Watch for the focus of windows
	and change the size of the drop shadows.
	(generate_shadows): Create differently sized shadows.
	(meta_compositor_get_window_pixmap): Get the xwindow correctly.

	* src/core/window.c (meta_window_notify_focus): Set the active window
	in the compositor.

2008-03-18  Marco Pesenti Gritti  <mpgritti@gmail.com>

        * src/core/window.c (window_would_be_covered): newly created windows
	can't be considered to be above themselves; fixes bug #519188.

2008-03-11  Matthew Wilson  <msw@gimp.org>

        * src/core/keybindings.c (meta_display_process_key_event, process_event,
        find_handler, process_mouse_move_resize_grab): allow moving workspace
	while moving window with modifier
        * src/core/workspace.c (meta_workspace_activate_with_focus): remove the
	correct window on jumping workspace while moving

2008-03-10  Josh Lee  <jleedev@gmail.com>

        * src/core/compositor.c (window_has_shadow): Don't shadow
	shaped windows.

2008-03-07  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.3.

2008-03-07  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.2 release.

2008-03-07  Thomas Thurman  <tthurman@gnome.org>

        * src/core/prefs.c (mouse_button_mods_handler): remove
	debug statements (*blush*)

2008-03-06  Thomas Thurman  <tthurman@gnome.org>

        * configure.in: Post-release bump to 2.23.2.

2008-03-06  Thomas Thurman  <tthurman@gnome.org>

        * NEWS: 2.23.1 release.

2008-03-06  Thomas Thurman  <tthurman@gnome.org>

        * tools/release-wrangler.py: basic md5 printing (not used yet);
	also print release announcements to stdout (eventually will
	need to be emailed to release list and blogged)

2008-03-06  Thomas Thurman  <tthurman@gnome.org>
